LPD-15427 Mirror tomcat reflection opens to upgrade client jvm